Git has been updated.

--- a/pages/products.html
+++ b/pages/products.html
@@ -9,16 +9,16 @@
 <body>
     <ul>
         <li>
-            <a href="/munka/index.html">Home</a>
+            <a href="/stefoandris.github.io/index.html">Home</a>
         </li>
         <li>
-            <a href="/munka/pages/products.html">Products</a>
+            <a href="/stefoandris.github.io/pages/products.html">Products</a>
         </li>
         <li>
-            <a href="/munka/pages/orders.html">Orders</a>
+            <a href="/stefoandris.github.io/pages/orders.html">Orders</a>
         </li>
         <li>
-            <a href="/munka/About.html">About</a>
+            <a href="/stefoandris.github.io/About.html">About</a>
         </li>
     </ul>
     <h1>Products</h1>
