--- a/pages/orders.html
+++ b/pages/orders.html
@@ -9,16 +9,16 @@
 <body>
     <ul>
         <li>
-            <a href="/stefoandris.github.io/index.html">Home</a>
+            <a href="/index.html">Home</a>
         </li>
         <li>
-            <a href="/stefoandris.github.io/pages/products.html">Products</a>
+            <a href="/pages/products.html">Products</a>
         </li>
         <li>
-            <a href="/stefoandris.github.io/pages/orders.html">Orders</a>
+            <a href="/pages/orders.html">Orders</a>
         </li>
         <li>
-            <a href="/stefoandris.github.io/About.html">About</a>
+            <a href="/About.html">About</a>
         </li>
     </ul>
     <h1>Orders</h1>
