Böngésző címsora kész

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul>
@@ -43,17 +44,18 @@
     <h3>Steps of order</h3>
     <ol>
         <li>Choose a burger</li>
+        <li>Sell it</li>
+        <li>Sell it</li>
+        <li>Sell it</li>
         <li>Buy it</li>
         <li>Buy it</li>
         <li>Buy it</li>
-        <li>Buy it</li>
+        <li>Sell it</li>
         <li>Give your address</li>
     </ol>
     <a href="http://kbr.com.pk/product/club-burger/">Barbecued Burger</a>
     <a href="http://pages/orders.html">Orders</a>
     <a target="_blank" href="http://kbr.com.pk/product/club-burger/">
-    
-        
         <img width="856" src="img/burger.jpg" alt="Burger">
     </a>
 
