--- a/balaton/balatongyorok.html
+++ b/balaton/balatongyorok.html
@@ -9,10 +9,15 @@
 </head>
 <body>
     <div class="keret">
+        <div class="header">
+            <div class="cimer">
+                <img src="../img/cimer.jpg" alt="címer">
+            </div>
         <h1>
             Balatongyörök kilátói
         </h1>
-        <p>
+        </div>
+        <p class="bevezeto">
             Balatongyörökön szebbnél-szebb helyszíneken 2 kilátó is várja a turistákat.
         </p>
         <h2>
