--- a/balaton/balatongyorok.html
+++ b/balaton/balatongyorok.html
@@ -20,28 +20,118 @@
         <p class="bevezeto">
             Balatongyörökön szebbnél-szebb helyszíneken 2 kilátó is várja a turistákat.
         </p>
-        <h2>
-            Batsányi kilátó 
-        </h2>
-        A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található a kilátó, ahonnan páratlan panoráma nyílik a Balaton-felvidékre. 2003-ban a Keszthelyi erdészet rendbe hozta a korábban megrongált kilátót. Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a Szerelemdombon keresztül. Vagy a Szépkilátótól induló piros háromszög jelzésen is. 
-        Szélesség	N 46.77717°
-        Hosszúság	E 17.35715°
-        Magasság	448 m
-        Megye/ország	Zala
-        Hegy	Pap-hegy
-        Forrás: hazaielmenyek.hu
-        http://hazaielmenyek.hu/latnivalo/balatongyorok/batsanyi-kilato-i11024
-        <h2>
-            Bél Mátyás kilátó 
-        </h2>
-        A Garga-hegy tetején található kilátó 1972-ben épült, a keszthelyi erdészet építette. A kilátó kitűnő panorámát nyújt a Tapolcai-medence tanúhegyeire. Ugyancsak kiváló a kilátás a Keszthelyi hegység dimbes-dombos hegyvonulataira, a somogyi partokra, a keszthelyi öbölre. A Keszthelyi-hegység fái között található kilátó környékén egyedi növény-és állatvilág található. 
-        Szélesség	N 46.76855°
-        Hosszúság	E 17.35227°
-        Magasság	221 m
-        Megye/ország	Zala
-        Hegy	Garga-hegy
-        Forrás: hazaielmenyek.hu
-        http://hazaielmenyek.hu/latnivalo/balatongyorok/bel-matyas-kilato-i3761
+        <div class="batsanyikilato">
+            <h2>
+                Batsányi kilátó 
+            </h2>
+            <table class="tablazat">
+                <tr>
+                    <th colspan="2">
+                        A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található a kilátó, ahonnan páratlan panoráma nyílik a Balaton-felvidékre. 2003-ban a Keszthelyi erdészet rendbe hozta a korábban megrongált kilátót. Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a Szerelemdombon keresztül. Vagy a Szépkilátótól induló piros háromszög jelzésen is. 
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        Szélesség
+                    </td>
+                    <td>	
+                        N 46.77717°
+                    </td>    
+                </tr>
+                <tr>
+                    <td>
+                        Hosszúság	
+                    </td>
+                    <td>
+                        E 17.35715°
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Magasság
+                    </td>
+                    <td>
+                        448 m
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Megye/ország	
+                    </td>
+                    <td>
+                        Zala
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Hegy
+                    </td>
+                    <td>
+                        Pap-hegy
+                    </td>
+                </tr>
+            </table>
+            <p>
+                Forrás: 
+                <a href="http://hazaielmenyek.hu/latnivalo/balatongyorok/batsanyi-kilato-i11024" target="_blank">hazaielmenyek.hu</a>
+            </p>
+        </div>
+        <div class="belmatyaskilato">
+            <h2>
+                Bél Mátyás kilátó 
+            </h2>
+            <table class="tablazat">
+                <tr>
+                    <th colspan="2">
+                        A Garga-hegy tetején található kilátó 1972-ben épült, a keszthelyi erdészet építette. A kilátó kitűnő panorámát nyújt a Tapolcai-medence tanúhegyeire. Ugyancsak kiváló a kilátás a Keszthelyi hegység dimbes-dombos hegyvonulataira, a somogyi partokra, a keszthelyi öbölre. A Keszthelyi-hegység fái között található kilátó környékén egyedi növény-és állatvilág található. 
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        Szélesség
+                    </td>
+                    <td>	
+                        N 46.76855°
+                    </td>    
+                </tr>
+                <tr>
+                    <td>
+                        Hosszúság	
+                    </td>
+                    <td>
+                        E 17.35227°
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Magasság
+                    </td>
+                    <td>
+                        221 m
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Megye/ország	
+                    </td>
+                    <td>
+                        Zala
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Hegy
+                    </td>
+                    <td>
+                        Garga-hegy
+                    </td>
+                </tr>
+            </table>
+            <p>
+                Forrás: 
+                <a href="http://hazaielmenyek.hu/latnivalo/balatongyorok/bel-matyas-kilato-i3761" target="_blank">hazaielmenyek.hu</a>
+            </p>
+        </div>
     </div>
     </body>
     </html>
