Táblázatok, linkek véglegesítése

--- a/balaton/balatongyorok.html
+++ b/balaton/balatongyorok.html
@@ -11,7 +11,7 @@
     <div class="keret">
         <div class="header">
             <div class="cimer">
-                <img src="../img/cimer.jpg" alt="címer">
+                <img src="./img/cimer.jpg" alt="címer">
             </div>
         <h1>
             Balatongyörök kilátói
